--- a/style.css
+++ b/style.css
@@ -120,6 +120,49 @@ body::before {
   transform: scale(1.05);
 }
 
+.product-cat-section{
+  position: relative;
+  width:100%;
+  height: 30vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.product-cat-section::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 90%;
+  background:linear-gradient(45deg,#ed2f91,#f05b9a);
+  border-radius: 0 0 50% 50%/0 0 50% 50%;
+  transform: scaleX(1.5);
+}
+
+.product-cat-section .product-cat-content{
+  position: relative;
+  z-index: 1;
+  margin: 0 auto;
+  max-width: 900px;
+  text-align: center;
+}
+
+.product-cat-section .product-cat-content h1{
+  margin: 0;
+  padding: 0;
+  color: floralwhite;
+  font-size: 3em;
+}
+
+.product-cat-section .product-cat-content p{
+  color:floralwhite;
+  font-size: 1.2em;
+}
+
+
 .banner-image {
   background-image:url('../images/Caoursoul_3.jpg');
   background-size: 100%;
