--- a/style.css
+++ b/style.css
@@ -147,6 +147,8 @@ body::before {
   transform: scale(1.05);
 }
 
+/* circle 1  */
+
 .product-cat-section{
   position: relative;
   width:100%;
@@ -188,6 +190,51 @@ body::before {
   color:floralwhite;
   font-size: 1.2em;
 }
+
+/* circle 2  */
+
+.product-cat-section-one{
+  position: relative;
+  width:100%;
+  height: 30vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.product-cat-section-one::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 90%;
+  background:linear-gradient(45deg,#ed2f91,#f05b9a);
+  border-radius: 50% 50% 0 0/50% 50% 0 0;
+  transform: scaleX(1.5);
+}
+
+.product-cat-section-one .product-cat-content-one{
+  position: relative;
+  z-index: 1;
+  margin: 0 auto;
+  max-width: 900px;
+  text-align: center;
+}
+
+.product-cat-section-one .product-cat-content-one h1{
+  margin: 0;
+  padding: 0;
+  color: floralwhite;
+  font-size: 3em;
+}
+
+.product-cat-section-one .product-cat-content-one p{
+  color:floralwhite;
+  font-size: 1.2em;
+}
+
 
 /* Image card Second */
 .img-card-container{
